# Minecraft-Clone

./: .gitignore  Cargo.toml  LICENSE  readme.md
Minecraft-v0.1/: Cargo.toml  readme.md
Minecraft-v0.1/main_app/: Cargo.toml
Minecraft-v0.1/main_app/src/: main.rs
Minecraft-v0.1/physics/: Cargo.toml
Minecraft-v0.1/physics/src/: lib.rs
Minecraft-v0.1/renderer/: Cargo.toml
Minecraft-v0.1/renderer/src/: block.rs  lib.rs  quads.rs  renderer_utils.rs
Vulkan-Intro/: Cargo.toml  readme.md
Vulkan-Intro/0. triangle/: Cargo.toml
Vulkan-Intro/0. triangle/src/: main.rs
Vulkan-Intro/1. triangle_inputs/: Cargo.toml
Vulkan-Intro/1. triangle_inputs/src/: main.rs  utils.rs
Vulkan-Intro/2. square/: Cargo.toml
Vulkan-Intro/2. square/src/: inputs.rs  main.rs  utils.rs
Vulkan-Intro/3. textures/: Cargo.toml
Vulkan-Intro/3. textures/src/: inputs.rs  main.rs  utils.rs
Vulkan-Intro/4. refactoring/: Cargo.toml
Vulkan-Intro/4. refactoring/src/: inputs.rs  main.rs  renderer.rs
Vulkan-Intro/5. animation/: Cargo.toml
Vulkan-Intro/5. animation/src/: inputs.rs  main.rs  renderer.rs
docs/: main.md
docs/draw_element/: draw_element.md
docs/game_core/: chunk.md  game_core.md  world.md
draw_element/: Cargo.toml
draw_element/src/: lib.rs
game_core/: Cargo.toml
game_core/src/: lib.rs  world.rs
game_core/src/world/: chunk.rs
main_app/: Cargo.toml
main_app/src/: main.rs
renderer/: Cargo.toml
renderer/src/: block.rs  lib.rs  renderer_structures.rs  renderer_utils.rs  texture.rs
renderer/src/shaders/: block.vert  interface.frag  interface.vert
(+6 files in other folders)
