[package]
name = "game_core"
version = "0.1.1"
edition = "2021"

[dependencies]
draw_element = { path = "../draw_element" }
winit = "0.28.0"
nalgebra-glm = "0.19.0"
noise = "0.9"
tokio = { version = "1.42.0", features = ["full"] }
bincode = "1.3.3"
serde = { version = "1.0.216", features = ["derive"] }
strum = "0.26" 
strum_macros = "0.26"
rand = "0.8"